--- a/BuddhaBowls/UserControls/PrepListControl.xaml
+++ b/BuddhaBowls/UserControls/PrepListControl.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:BuddhaBowls.UserControls"
+             xmlns:parent="clr-namespace:BuddhaBowls"
              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              mc:Ignorable="d" 
@@ -28,9 +29,29 @@
         </Button>
         <Button Grid.Row="1" Height="30" Width="70" Content="Edit" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="70, 0"
                 Command="{Binding EditPrepCommand}" />
+        <Expander Grid.Row="1" Grid.RowSpan="3" VerticalAlignment="Top" HorizontalAlignment="Left" Width="250" Background="AliceBlue"
+                  Header="{Binding InvList.TotalValueMessage}" IsExpanded="False" Panel.ZIndex="1">
+            <ItemsControl ItemsSource="{Binding InvList.CategoryPrices}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate DataType="{x:Type parent:PriceExpanderItem}">
+                        <Grid Background="AliceBlue">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="2*" />
+                                <ColumnDefinition Width="1*" />
+                            </Grid.ColumnDefinitions>
+                            <Label x:Name="label" Grid.Column="0" Content="{Binding Label}" HorizontalAlignment="Left" Margin="20,0,0,0" Grid.Row="2"
+                                   VerticalAlignment="Center"/>
+                            <TextBlock Grid.Column="1" Text="{Binding Path=Price, StringFormat=c}" HorizontalAlignment="Left"
+                                       VerticalAlignment="Center"/>
+                        </Grid>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </Expander>
         <DataGrid x:Name="dataGrid2" Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
                 ScrollViewer.VerticalScrollBarVisibility="Auto" ItemsSource="{Binding PrepItemList}"
-                SelectedItem="{Binding SelectedPrepItem}" AutoGenerateColumns="False" CanUserAddRows="False" Margin="-1,0,1,0">
+                SelectedItem="{Binding SelectedPrepItem}" AutoGenerateColumns="False" CanUserAddRows="False" Margin="1,0,1,0"
+                RowEditEnding="dataGrid2_RowEditEnding">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Product" Binding="{Binding Name}" Width="2*" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Prep Unit" Binding="{Binding CountUnit}" Width="2*" IsReadOnly="True"/>
