--- a/BuddhaBowls/UserControls/AddVendorStep1.xaml
+++ b/BuddhaBowls/UserControls/AddVendorStep1.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:BuddhaBowls.UserControls"
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              mc:Ignorable="d" 
-             d:DesignHeight="250" d:DesignWidth="400">
+             d:DesignHeight="250" d:DesignWidth="500">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="120" />
@@ -19,6 +19,9 @@
             <RowDefinition Height="40" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
+        <Button Content="Delete Vendor" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Width="100" Height="25"
+                Command="{Binding DeleteVendorCommand}" Visibility="{Binding DeleteVendorVisibility}"/>
+
         <Label Grid.Column="0" Grid.Row="0" Content="Name:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
         <TextBox Grid.Column="1" Grid.Row="0" Text="{Binding Vend.Name}" HorizontalAlignment="Left" VerticalAlignment="Center" Width="200"
                     Height="25" Margin="10, 0" />
