--- a/BuddhaBowls/UserControls/ChangeItemOrderControl.xaml
+++ b/BuddhaBowls/UserControls/ChangeItemOrderControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="BuddhaBowls.UserControls.AddInvStep3"
+﻿<UserControl x:Class="BuddhaBowls.UserControls.ChangeItemOrderControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
