--- a/BuddhaBowls/UserControls/CogsControl.xaml
+++ b/BuddhaBowls/UserControls/CogsControl.xaml
@@ -20,8 +20,6 @@
         <Label Content="End Date:" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="200, 0, 0, 0" />
         <DatePicker Grid.Row="1" SelectedDate="{Binding EndDate}" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="260, 0, 0, 0"
                     Width="120"/>
-        <Button Content="Calculate" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" Margin="390, 0, 0, 0"
-                Command="{Binding CalculateCommand}" />
 
         <DataGrid x:Name="dataGrid" Grid.Row="2" ItemsSource="{Binding CategoryList}" HorizontalAlignment="Stretch"
                               VerticalAlignment="Stretch" ScrollViewer.VerticalScrollBarVisibility="Auto" CanUserReorderColumns="False"
@@ -29,9 +27,8 @@
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Category" Binding="{Binding Name}" Width="2*" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Start Inv" Binding="{Binding Path=StartInv, Mode=OneWay}" Width="1*" />
-                <DataGridTextColumn Header="Purchases" Binding="{Binding Path=Purchases, Mode=OneWay}" Width="1*" />
+                <DataGridTextColumn Header="Rec Purchases" Binding="{Binding Path=Purchases, Mode=OneWay}" Width="1*" />
                 <DataGridTextColumn Header="End Inv" Binding="{Binding Path=EndInv, Mode=OneWay}" Width="1*" />
-                <DataGridTextColumn Header="Goods Sold" Binding="{Binding Path=GoodsSold, Mode=OneWay}" Width="1*" />
                 <DataGridTextColumn Header="COGS Cost" Binding="{Binding Path=CogsCost, StringFormat=c}" IsReadOnly="True" Width="2*" />
             </DataGrid.Columns>
         </DataGrid>
