--- a/BuddhaBowls/UserControls/BreakdownDisplay.xaml
+++ b/BuddhaBowls/UserControls/BreakdownDisplay.xaml
@@ -16,13 +16,28 @@
         <TextBlock x:Name="textBlock1" Grid.Row="0" HorizontalAlignment="Center" Margin="0,5,0,0" TextWrapping="NoWrap" Text="{Binding Header}"
                                            VerticalAlignment="Top" FontSize="18"/>
         <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
-            <ItemsControl Name="BreakdownItemsDisplay" ItemsSource="{Binding BreakdownList}">
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <local:BreakdownCategory/>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="{Binding HasShipping}" />
+                </Grid.RowDefinitions>
+                <ItemsControl Name="BreakdownItemsDisplay" Grid.Row="0" ItemsSource="{Binding BreakdownList}">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <local:BreakdownCategory/>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+                <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="3*" />
+                        <ColumnDefinition Width="1*" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="Shipping Cost" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <TextBlock Text="{Binding Path=VendorShippingCost, StringFormat=c}" Grid.Column="1" HorizontalAlignment="Center"
+                               VerticalAlignment="Center"/>
+                </Grid>
+            </Grid>
         </ScrollViewer>
         <TextBlock Grid.Row="2" Text="Total:" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10, 0" FontWeight="Bold"/>
         <TextBlock Name="TotalCost" Grid.Row="2" Text="{Binding OrderTotal, StringFormat=c}" VerticalAlignment="Center" HorizontalAlignment="Right"
