--- a/BuddhaBowls/UserControls/BreadGuideControl.xaml
+++ b/BuddhaBowls/UserControls/BreadGuideControl.xaml
@@ -15,8 +15,33 @@
             <RowDefinition Height="56" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
+        
         <TextBlock x:Name="textBlock" Grid.Row="0" Margin="0" Text="Bread Order Guide" VerticalAlignment="Center" HorizontalAlignment="Center"
                    FontSize="30"/>
+
+        <Label Content="Bread Order Week:" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="5, 0, 0, 5" />
+        <DatePicker SelectedDate="{Binding BreadOrderDate}" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="125, 0, 0, 5"
+                    Width="120"/>
+        <TextBlock Text="{Binding DateErrorMessage}" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="260, 0, 0, 5" 
+                   Foreground="Red"/>
+        <ItemsControl Grid.Row="1" ItemsSource="{Binding BreadOrderList[0].BreadDescDict.Values}" HorizontalAlignment="Right"
+                      VerticalAlignment="Stretch" Width="200">
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="3*" />
+                            <ColumnDefinition Width="1*" />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="{Binding Path=Name, StringFormat='{}{0} Par Factor:'}" Grid.Column="0" HorizontalAlignment="Right"
+                               VerticalAlignment="Center" Margin="0, 0, 5, 0" />
+                        <TextBox Text="{Binding ParFactor}" Grid.Column="1" HorizontalAlignment="Left" Width="30" TextChanged="TextBox_TextChanged" />
+                    </Grid>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
+        <Button Content="Excel Sheet" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0, 0, 205, 5" Width="80"
+                Command="{Binding GetReportCommand}" />
 
         <Border BorderBrush="Black" BorderThickness="1" Grid.Row="2">
             <Grid x:Name="date_grid" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
