--- a/BuddhaBowls/UserControls/BreadGuideControl.xaml
+++ b/BuddhaBowls/UserControls/BreadGuideControl.xaml
@@ -40,6 +40,8 @@
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
+        <Button Content="Try Square" Grid.Row="1" Width="100" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0, 0, 205, 5"
+                Command="{Binding SquareCommand}" />
 
         <Border BorderBrush="Black" BorderThickness="1" Grid.Row="2">
             <Grid x:Name="date_grid" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
@@ -80,7 +82,7 @@
                     <ColumnDefinition Width="1*" />
                     <ColumnDefinition Width="1*" />
                 </Grid.ColumnDefinitions>
-                <Label Content="Gross Sales + Online" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                <Label Content="Gross Sales" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" />
                 <Label Content="Sales Forecast" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" />
             </Grid>
         </ScrollViewer>
